# OpenGL-Utilities

./: CMakeLists.txt  Dependencies.cmake  LICENSE  README.md
.cache/clangd/index/: Mesh.cpp.FAC2E6B3C68D26EB.idx  Mesh.h.D1F8B6F61EC746AB.idx  Model.cpp.BED3C670FD22104E.idx  Model.h.00FA97C35E80CF85.idx  TextRenderer.cpp.C914A5FD0DE7155B.idx  TextRenderer.h.11FF06B992DA7935.idx  modelLoader.cpp.40BF09D83F64D553.idx  renderingUtilities.cpp.F8576CFBBD892EF6.idx  renderingUtilities.h.CE78493DB7E9CCD0.idx  shaderLoader.cpp.3F633850F9F858F1.idx  shaderLoader.h.F1B1992218D81CBA.idx  stb_image.h.56B8D75E0AFD45C4.idx  textureReader.cpp.1E9489268A738012.idx  textureReader.h.00EB9DD37759B206.idx
src/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  TextRenderer.cpp  TextRenderer.h  renderingUtilities.cpp  renderingUtilities.h  shaderLoader.cpp  shaderLoader.h  textureReader.cpp  textureReader.h
